# Afeather

./: Cargo.toml
benches/: micro_process.rs
src/: archetype.rs  component.rs  lib.rs  process.rs  query.rs  tests.rs  tuples.rs  update.rs  world.rs
src/storage/: components.rs  global.rs  mod.rs  per_archetype.rs  per_entity.rs  sparse.rs
